--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,6 @@
   "liveSassCompile.settings.excludeList": ["/node_modules/", "/.vscode/"],
   "liveSassCompile.settings.generateMap": true,
   "liveSassCompile.settings.autoprefix": ["> 1%", "last 2 versions"],
-  "editor.suggest.showStatusBar": false
+  "editor.suggest.showStatusBar": false,
+  "liveServer.settings.port": 5501
 }
